Bug 205235 Fix floats to work in RTL spans p=mozilla-bugzilla@future.shiny.co.il (Ilya Konstantinov) r/sr=dbaron